  in the current encoding and is longer than 10,000 characters, it may
  result in an infinite loop of warnings generated by base::cat()
  (at least on Linux).  This is now detected and writeBin() is used
  as fallback for outputting.  For details, see R-devel thread
  https://stat.ethz.ch/pipermail/r-devel/2017-January/073571.html.
o BUG FIX: rcode() would sometimes return NULL.


Version: 0.40.0 [2016-12-05]
o All vignette formats now output a tangle file even if empty.
  For example, in the past *.asis and *.ltx vignettes would not
  generate *.R tangle files, whereas now they generate "empty" ones
  (R CMD build drops such "empty" tangle R files but that is a
  different story).  This was done in order to hotfix / workaround
  PR #17185 (https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17185)
o ROBUSTNESS: findAsciiDoc() and findPandoc() is more liberal when
  trying to infer and parse the version of the executable and if
  they still fail they give more informative error messages.
o CLEANUP: Deprecated RSP engine v0.1.0 is now defunct.
o CLEANUP: Made deprecated methods defunct.


Version: 0.30.0 [2016-05-15]
o CLEANUP: Deprecated several methods that was part of the old
  API, e.g. compileRsp(), sourceRsp(), translateRsp() etc.
o CLEANUP: Renamed exec/ script 'rsource(.bat)' to 'rcode(.bat)'.
o CLEANUP: Removed epsDev(), which has been defunct since
  R.rsp 0.19.7 (Jan 2015).
o CLEANUP: Workaround for markdown (<= 0.5.4) (Jan 2013) removed.
o WORKAROUND: knitr::pandoc() in knitr (>= 1.13) appends '_utf8'
  to output HTML filename (to the part before the extension).
  This caused one of the vignette engines to fail.  Now '_utf8'
  is dropped from the HTML filename if this is detected.


Version: 0.21.0 [2015-12-18]
o Renamed rscript() to rcode().  rscript() is now deprecated.
o Added vignette option %\VignetteCompression{} for alternative
  way of setting meta variable 'compression', e.g.
  %\VignetteCompression{gs(ebook)+qpdf} to compressed PDF output.