@@ -8,6 +8,8 @@ o WORKAROUND: If the generated RSP output contains invalid characters
   (at least on Linux).  This is now detected and writeBin() is used
   as fallback for outputting.  For details, see R-devel thread
   https://stat.ethz.ch/pipermail/r-devel/2017-January/073571.html.
+o BUG FIX: RspRSourceCodeFactory did not preserve '\unnnn' encoded
+  UTF-8 characters (they where turned into "<U+NNNN>" strings).
 o BUG FIX: rcode() would sometimes return NULL.
 
 
